# python-project-83

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  build.sh  database.sql  pyproject.toml  requirements.txt  secret.env  sonar-project.properties  test_db.py
.github/workflows/: PyCI.yml  my_workflow.yml  pyci.yml  python-app.yml
page_analizer/: app.py
page_analyzer/: app.py  ceo_analysis.py  checker.py  checks_repo.py  data_base.py  database.py  database.sql  db.py  parser.py  test_page_analyzer.py  url_validator.py  urls_repo.py  validator.py
page_analyzer/templates/: base.html  header.html  incorrect_id.html  index.html  layout.html  main.html  url.html  url_detail.html  urls.html
page_analyzer/templates/urls/: index.html  show.html
tests/: conftest.py  test_app.py  test_db.py  test_minimal.py  test_page_analyzer.py
